# cookiecutter-django-api

./: LICENSE  README.md  cookiecutter.json  pyproject.toml
.github/workflows/: test-template.yml
hooks/: post_gen_project.py
tests/: context.yml  test_project_generation.py
{{cookiecutter.project_name}}/: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Makefile  README.md  compose.yml  docker-compose.yml  manage.py  mypy.ini  pyproject.toml
{{cookiecutter.project_name}}/.github/workflows/: backend.yml  deploy.yml  docker.yml
{{cookiecutter.project_name}}/fixtures/: accounts.customuser.yaml
{{cookiecutter.project_name}}/hooks/: post_gen_project.py
{{cookiecutter.project_name}}/requirements/: Makefile  base.in  deployment.in  dev.in  prod.in
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/: asgi.py  celery.py  urls.py  wsgi.py
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/accounts/: admin.py  apps.py  factories.py  serializers.py  urls.py  views.py
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/accounts/migrations/: 0001_initial.py
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/accounts/tests/: test_models.py
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/settings/: __init__.py  base.py  local.py  production.py  tests.py
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/settings/conf/: celery_settings.py  theme.py
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/templates/: index.html
