[project]
name = "{{ cookiecutter.project_name }}"
version = "0.1.0"
description = "{{ cookiecutter.description }}"
requires-python = ">={{ cookiecutter._python_version_specs[cookiecutter.python_version]['versions'][0] }}, <4.0"

dependencies = [
    "Django",
    {%- if cookiecutter.use_dbbackup == "y" %}
    "django-dbbackup",
    {%- endif %}
    {%- if cookiecutter.use_drf == "y" %}
    "djangorestframework",
    {%- endif %}
    {%- if cookiecutter.use_drf_yasg == "y" %}
    "drf-yasg",
    {%- endif %}
    {%- if cookiecutter.use_django_filters == "y" %}
    "django-filter",
    {%- endif %}
    {%- if cookiecutter.use_jazzmin == "y" %}
    "django-jazzmin",
    {%- endif %}
    "django-extensions",
    {%- if cookiecutter.use_django_debug_toolbar == 'y' %}
    "django-debug-toolbar",
    {%- endif %}
    {%- if cookiecutter.use_celery == 'y' %}
    "celery",
    {%- endif %}
    "psycopg2-binary",
    "ipython",
    "environs",
    "pyyaml",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-django",
    "pytest-xdist",
    {%- if cookiecutter.use_pre_commit == 'y' %}
    "pre-commit",
    {%- endif %}
    "factory-boy",
    "ruff",
    "mypy",
    "django-stubs",
]
prod = ["gunicorn", "sentry-sdk"]

[tool.ruff]
target-version = "py{{ cookiecutter._python_version_specs[cookiecutter.python_version]['versions'][0].replace('.', '') }}"
line-length = 120
extend-exclude = ["__pycache__", "build"]
[tool.ruff.lint]
select = [
    "A",   # flake8 builtins
    "S",   # flake8-bandit
    "DJ",  # flake8-django
    "PT",  # flake8-pytest-style
    "TID", # flake8-tidy-imports
    "INT", # flake8-gettext
    "PTH", # flake8-use-pathlib
    "T10", # flake8-debugger
    "ERA", # flake8-eradicate
    "C4",  # flake8-comprehensions
    "B",   # flake8-bugbear
    "G",   # flake8-logging-format
    "E",   # pycodestyle error
    "W",   # pycodestyle warning
    "F",   # pyflakes
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "I",   # isort
    "C9",  # mccabe
    "I",   # isort
]

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = [
    "S101", # "Use of `assert` detected"
    "ARG",  # "Unused function argument". Fixtures are often unused.
    "S105", # "Possible hardcoded password".
]
"**settings/**" = [
    "F405", # variable may be undefined due to * import
    "F403", # allow * imports
]
[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pep8-naming]
classmethod-decorators = [
    "classmethod",
    "pydantic.validator",
    "pydantic.root_validator",
]

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:"]
omit = [
    "**/fixtures.py",
    "manage.py",
    "**/wsgi.py",
    "**/settings/*.py",
    "**/migrations/*.py",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "{{ cookiecutter.project_name }}.settings.tests"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
norecursedirs = [
    "deployment*",
    ".git/*",
    ".mypy_cache/*",
    ".pytest_cache/*",
    "migrations/*",
    "settings/*",
]
addopts = "--nomigrations"

[tool.mypy]
plugins = ["mypy_django_plugin.main"]
check_untyped_defs = true
[tool.django-stubs]
django_settings_module = "{{ cookiecutter.project_name }}.settings.local"

[[tool.mypy.overrides]]
module = ["*.migrations.*", "*.settings.*", "*.tests.*"]
ignore_errors = true

[[tool.mypy.overrides]]
module = "factory.*"
ignore_missing_imports = true

{%- if cookiecutter.use_drf == "y" %}
[[tool.mypy.overrides]]
module = "rest_framework.*"
ignore_missing_imports = true
{%- endif %}

{%- if cookiecutter.use_django_extensions == "y" %}
[[tool.mypy.overrides]]
module = "django_extensions.*"
ignore_missing_imports = true
{%- endif %}

{%- if cookiecutter.use_tox == 'y' %}
[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py310, flake8, black, isort, mypy
skipsdist = True

[gh-actions]
python =
    {{ cookiecutter._python_version_specs[cookiecutter.python_version]['versions'][0] }}: py{{ cookiecutter._python_version_specs[cookiecutter.python_version]['versions'][0].replace('.', '') }}

[testenv:ruff]
basepython = python
deps = ruff
commands = ruff format --check {{ cookiecutter.project_name }}
           ruff check {{ cookiecutter.project_name }}

[testenv:mypy]
deps = mypy, django-stubs
commands = mypy {{ cookiecutter.project_name }}

[testenv]
setenv = PYTHONPATH = {toxinidir}
deps = pytest, pytest-django, django
commands = pytest {{ cookiecutter.project_name }}
"""
{%- endif %}
